--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -4,7 +4,7 @@
     <input type="text" placeholder="Search products..." />
   </div>
   <div class="header-actions">
-    <!-- <button class="btn">All Categories</button> -->
+    <button class="btn" routerLink="/categories">All Categories</button>
     <button class="btn cart-btn" routerLink="/cart">
       Cart
       @if (cartItemCount() > 0) {
