--- a/src/app/shared/header/header.html
+++ b/src/app/shared/header/header.html
@@ -1,9 +1,10 @@
 <header class="header-container">
   <div class="brand" routerLink="">E-Commerce</div>
   <div class="search-box">
-    <input type="text" placeholder="Search products..." />
+    <input type="text" placeholder="Search products..."/>
   </div>
   <div class="header-actions">
+    <button class="btn cart-btn" routerLink="/toprated">Top Rated</button>
     <button class="btn" routerLink="/categories">All Categories</button>
     <button class="btn cart-btn" routerLink="/cart">
       Cart
